RESOLVED FIXED308318
Fix incorrect NODELETE annotation on DOMWindow::opener
https://bugs.webkit.org/show_bug.cgi?id=308318
Summary Fix incorrect NODELETE annotation on DOMWindow::opener
Ryosuke Niwa
Reported 2026-02-20 11:06:36 PST
Fix the outstanding warning on this function.
Attachments
Ryosuke Niwa
Comment 1 2026-02-20 11:18:22 PST
EWS
Comment 2 2026-02-20 11:46:52 PST
Committed 307933@main (5a36716e1b15): <https://commits.webkit.org/307933@main> Reviewed commits have been landed. Closing PR #59104 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-02-20 11:47:12 PST
Note You need to log in before you can comment on or make changes to this bug.