Fix incorrect NODELETE annotation on DOMWindow::opener https://bugs.webkit.org/show_bug.cgi?id=308318

Reviewed by Anne van Kesteren and Wenson Hsieh.

Remove the use of RefPtr to conform to NODELETE requirement.

No new tests since there should be no behavior changes.

* Source/WebCore/page/DOMWindow.cpp:
(WebCore::DOMWindow::opener const):

Canonical link: https://commits.webkit.org/307933@main